--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width">
+		<link rel="stylesheet" href="css/hamburgers.min.css">
 		<link rel="stylesheet" href="css/lightslider.min.css">
-		<link rel="stylesheet" href="css/main.css?v=1592934199900">
+		<link rel="stylesheet" href="css/main.css?v=1593075723342">
 	</head>
 	<body>
 		<main>
+			<button class="hamburger hamburger--collapse"><span class="hamburger-box"><span class="hamburger-inner"></span></span></button>
 			<div class="content">
 				<section class="virtual-exhibition" id="virtual-exhibition">
 					<div class="wrapper virtual-exhibition__wrapper">
@@ -221,9 +223,9 @@
 				</div>
 			</div>
 		</main>
-		<script src="js/vendor.js?v=1592934199900"></script>
+		<script src="js/vendor.js?v=1593075723342"></script>
 		<script src="js/jquery-3.5.1.min.js"></script>
 		<script src="js/lightslider.min.js"></script>
-		<script src="js/main.js?v=1592934199900"></script>
+		<script src="js/main.js?v=1593075723342"></script>
 	</body>
 </html>
