--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<section class="virtual-exhibition" id="virtual-exhibition">
 					<div class="wrapper virtual-exhibition__wrapper">
 						<div class="wrapper__top-part">
-							<p>Международный Центр Содействия Бизнесу (ICBA) представляет проект  минерал экспо 2020</p>
+							<p>Международный Центр Содействия Бизнесу (ICBA) представляет проект virtual exibition 2020</p>
 						</div>
 						<div class="wrapper__bottom-part"><img src="images/exhibition-logo.svg" alt="">
 							<p>Виртуальная выставка. Это виртуальная площадка с эффектом полного погружения, которая объединит  продавцов и покупателей разных стран.</p>
