--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 				</section>
 				<section class="created" id="created">
 					<div class="wrapper created__wrapper">
-						<div class="flex-row created__flex-row"><a href="https://webfact.ru" target="_blank">Сделано WebFact</a></div>
+						<div class="flex-row created__flex-row"><a href="https://promo.webfact.ru" target="_blank">Сделано WebFact</a></div>
 					</div>
 				</section>
 			</div>
@@ -223,9 +223,9 @@
 				</div>
 			</div>
 		</main>
-		<script src="js/vendor.js?v=1593075723342"></script>
+		<script src="js/vendor.js"></script>
 		<script src="js/jquery-3.5.1.min.js"></script>
 		<script src="js/lightslider.min.js"></script>
-		<script src="js/main.js?v=1593075723342"></script>
+		<script src="js/main.js"></script>
 	</body>
 </html>
