--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width">
 		<link rel="stylesheet" href="css/hamburgers.min.css">
 		<link rel="stylesheet" href="css/lightslider.min.css">
-		<link rel="stylesheet" href="css/main.css?v=1593075723342">
+		<link rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
 		<main>
@@ -70,10 +70,10 @@
 							<div class="text methods__text">
 								<p>Еще некоторое время назад, решения перечисленных вопросов являлись действительно большой проблемой, имели частичный характер и были затруднительны ввиду недостаточного развития современных технологий. </p>
 								<p>В настоящее время имея хорошо подготовленную технологическую базу, включая современные каналы коммуникаций 4G+, 5G, перспективный проект STARLINK, представляется реальным и возможным функционирование online площадки для стабильной работы деловых и общественных взаимодействий, неподвластной внешним факторам. </p>
-								<p>Таким решением является концепция ViEx — это программно-аппаратный комплекс, позволяющий участвовать в качестве экспонента или простого посетителя на выставках, изучать товары, а самое главное заключать сделки находясь в любом месте, где есть подключение к сети интернет.</p>
-								<p>ViEx позволяет установить online общение непосредственно с экспонентом так, как бы это было в обычной встрече на выставке. И даже если язык общения экспонента и посетителя различаются, технология ViEx позволяет использовать услуги переводчика так, как если бы этот переводчик был бы с вами рядом.</p>
-								<p>Провести приватные переговоры в защищенной виртуальной переговорной так же предусмотрено ViEx.</p>
-								<p>Презентации, доклады для широкой публики, возможны ввиде видеоконференций и вебинаров внутри ViEx, в предусмотренных специально для этого виртуальных конгресс-холлах и залах. Посредством ViEx так же возможно проведение самых разнообразных общественных дискуссий, форумов, мероприятий для профильных специалистов.</p>
+								<p>Таким решением является концепция Vi<span class="pink">EX</span><sup>by ICBA</sup> — это программно-аппаратный комплекс, позволяющий участвовать в качестве экспонента или простого посетителя на выставках, изучать товары, а самое главное заключать сделки находясь в любом месте, где есть подключение к сети интернет.</p>
+								<p>Vi<span class="pink">EX</span><sup>by ICBA</sup> позволяет установить online общение непосредственно с экспонентом так, как бы это было в обычной встрече на выставке. И даже если язык общения экспонента и посетителя различаются, технология Vi<span class="pink">EX</span><sup>by ICBA</sup> позволяет использовать услуги переводчика так, как если бы этот переводчик был бы с вами рядом.</p>
+								<p>Провести приватные переговоры в защищенной виртуальной переговорной так же предусмотрено Vi<span class="pink">EX</span><sup>by ICBA</sup>.</p>
+								<p>Презентации, доклады для широкой публики, возможны ввиде видеоконференций и вебинаров внутри Vi<span class="pink">EX</span><sup>by ICBA</sup>, в предусмотренных специально для этого виртуальных конгресс-холлах и залах. Посредством Vi<span class="pink">EX</span><sup>by ICBA</sup> так же возможно проведение самых разнообразных общественных дискуссий, форумов, мероприятий для профильных специалистов.</p>
 							</div>
 							<div class="image methods__image"><img src="images/methods.png" alt=""></div>
 						</div>
@@ -87,11 +87,11 @@
 						<div class="flex-row technical__flex-row">
 							<div class="text technical__text">
 								<p>Международная выставка, ярмарка, форум в привычном Вам понимании, только не отходя от компьютера.Лучшие достижения игровой индустрии соединяются с прагматическим решением прикладных вопросов и проблем.</p>
-								<p>Взаимодействие реализовано в виртуальной среде ViEx, где предусмотрены такие же как в обычном понимании тематические павильоны, которые экспоненты могут арендовать или заказать персональные. Персональные стенды построены внутри ViEx в соответствии с предпочтениями и стилем экспонента. Гибкая настройка под задачу от типового стенда до многозального и многоэтажного.</p>
-								<p>Возможность создавать и использовать профильные залы под конкретные тематические мероприятия от выставок конкретных регионов до проведения  конгрессов  по экологии и климату.Детализация представляемого экспонентом товара или услуги  реализуется с учетом современного подхода  с применением всех доступных технологий, включая непосредственную связь с экспонентом в режиме видеозвонка  с представлением, по требованию услуг переводчика. ViEx предусматривает наличие развитой системы внутренней навигации и справочной информации. Внешние посетители не смогут заблудится - их встретит виртуальный помошник и подскажет как найти то, что попадает в сферу их интересов.А еще ViEx это хорошая рекламная площадка, направленная на профильных участников и посетителей. Такого удобного размещения рекламных материалов различных форматов, включая 3D модели не смогут предоставить никакие другие решения.</p>
+								<p>Взаимодействие реализовано в виртуальной среде Vi<span class="pink">EX</span><sup>by ICBA</sup>, где предусмотрены такие же как в обычном понимании тематические павильоны, которые экспоненты могут арендовать или заказать персональные. Персональные стенды построены внутри Vi<span class="pink">EX</span><sup>by ICBA</sup> в соответствии с предпочтениями и стилем экспонента. Гибкая настройка под задачу от типового стенда до многозального и многоэтажного.</p>
+								<p>Возможность создавать и использовать профильные залы под конкретные тематические мероприятия от выставок конкретных регионов до проведения  конгрессов  по экологии и климату.Детализация представляемого экспонентом товара или услуги  реализуется с учетом современного подхода  с применением всех доступных технологий, включая непосредственную связь с экспонентом в режиме видеозвонка  с представлением, по требованию услуг переводчика. Vi<span class="pink">EX</span><sup>by ICBA</sup> предусматривает наличие развитой системы внутренней навигации и справочной информации. Внешние посетители не смогут заблудится - их встретит виртуальный помошник и подскажет как найти то, что попадает в сферу их интересов.А еще Vi<span class="pink">EX</span><sup>by ICBA</sup> это хорошая рекламная площадка, направленная на профильных участников и посетителей. Такого удобного размещения рекламных материалов различных форматов, включая 3D модели не смогут предоставить никакие другие решения.</p>
 							</div>
 							<div class="image technical__image"><img src="images/technical.jpg" alt="">
-								<p>Еще одним этапом развития ViEx является использование технологий смарт-контрактов и арбитража сделок, включая внутренние расчетные механизмы. Нельзя не упомянуть о том, что пространство ViEx является, так же как и обычные  массовые мероприятия, хорошей площадкой для рекламодателей. Размещенную рекламу будут видеть все посетители ViEx.</p>
+								<p>Еще одним этапом развития Vi<span class="pink">EX</span><sup>by ICBA</sup> является использование технологий смарт-контрактов и арбитража сделок, включая внутренние расчетные механизмы. Нельзя не упомянуть о том, что пространство Vi<span class="pink">EX</span><sup>by ICBA</sup> является, так же как и обычные  массовые мероприятия, хорошей площадкой для рекламодателей. Размещенную рекламу будут видеть все посетители Vi<span class="pink">EX</span><sup>by ICBA</sup>.</p>
 							</div>
 						</div>
 					</div>
@@ -104,8 +104,8 @@
 						<div class="flex-row economic__flex-row">
 							<div class="text economic__text">
 								<p>Не секрет, что любое массовое внешнее мероприятие, требует от компании значительных ресурсов и затрат. Если традиционное выставочное-ярморочное мероприятие или проводимый форум происходят не в стране участника, что нередко бывает, то на подготовку стендов и выставочных площадей, перемещение образцов, затрачиваются довольно большие суммы. Следует добавить к этому издержки на организацию поездки. </p>
-								<p>Анализируя эти затраты, приходит понимание, что ViEx это тот инструмент, который при значительно большем охвате целевой аудитории, позволит иметь сокращение издержек. Направляя сэкономленные компанией средства, например, на цели рекламы и продвижения, суммарный эффект будут иметь весьма большой эффект, который в настоящее время невозможно оценить детально.</p>
-								<p>В деле организации общественных и/или отраслевых дискуссий эффект разумной экономии так же присутствует, однако к нему добавляется повышенная оперативность проведения высокоактуальных тематических мероприятий. Частично это подтверждено проводимыми в период пандемии онлайн совещаний, включая обсуждение международных повесток. Организовать межотраслевое, межстрановое взаимодействие внутри ViEx получится значительно быстрее.</p>
+								<p>Анализируя эти затраты, приходит понимание, что Vi<span class="pink">EX</span><sup>by ICBA</sup> это тот инструмент, который при значительно большем охвате целевой аудитории, позволит иметь сокращение издержек. Направляя сэкономленные компанией средства, например, на цели рекламы и продвижения, суммарный эффект будут иметь весьма большой эффект, который в настоящее время невозможно оценить детально.</p>
+								<p>В деле организации общественных и/или отраслевых дискуссий эффект разумной экономии так же присутствует, однако к нему добавляется повышенная оперативность проведения высокоактуальных тематических мероприятий. Частично это подтверждено проводимыми в период пандемии онлайн совещаний, включая обсуждение международных повесток. Организовать межотраслевое, межстрановое взаимодействие внутри Vi<span class="pink">EX</span><sup>by ICBA</sup> получится значительно быстрее.</p>
 							</div>
 							<div class="image economic__image"><img src="images/economic.jpg" alt=""></div>
 						</div>
@@ -118,9 +118,9 @@
 						</div>
 						<div class="flex-row experience__flex-row">
 							<div class="text experience__text">
-								<p>Частично попытки реализовать концепции, отдаленно напоминающие ViEx имели место и ранее. Но основным препятствием реализации такого рода  проектов являлось недостаточная готовность технико-технологической базы и современных программно-аппаратных решений. В недавнем прошлом,  устройства не позволяли иметь необходимую вычислительную мощность и пригодные для реализации каналы коммуникаций, прежде всего ограниченный по скорости и относительно дорогой мобильный трафик в недавнем прошлом.  На текущее время каких либо существенных ограничений для использования ViEx, в современных персональных устройствах не содержится. Технические характеристики большинства современных гаджетов, спокойно позволяют использовать их для обсуждаемой задачи.</p>
-								<p>Еще одним существенным фактором препятствия развитию заложенных в ViEx идей являлась устоявшиеся привычки традиционной реализации выставок, ярмарок и форумов. Переломным моментом востребованности решений, заложенных в ViEx, стало понимание существования внешних обстоятельств, стратегически влияющих на возможности привычной использовать их для обсуждаемой задачи.</p>
-								<p>Еще одним существенным фактором препятствия развитию заложенных в ViEx идей являлась устоявшиеся привычки традиционной реализации выставок, ярмарок и форумов. Переломным моментом востребованности решений, заложенных в ViEx, стало понимание существования внешних обстоятельств, стратегически влияющих на возможности привычной и традиционной организации «выставочного уклада».</p>
+								<p>Частично попытки реализовать концепции, отдаленно напоминающие Vi<span class="pink">EX</span><sup>by ICBA</sup> имели место и ранее. Но основным препятствием реализации такого рода  проектов являлось недостаточная готовность технико-технологической базы и современных программно-аппаратных решений. В недавнем прошлом,  устройства не позволяли иметь необходимую вычислительную мощность и пригодные для реализации каналы коммуникаций, прежде всего ограниченный по скорости и относительно дорогой мобильный трафик в недавнем прошлом.  На текущее время каких либо существенных ограничений для использования Vi<span class="pink">EX</span><sup>by ICBA</sup>, в современных персональных устройствах не содержится. Технические характеристики большинства современных гаджетов, спокойно позволяют использовать их для обсуждаемой задачи.</p>
+								<p>Еще одним существенным фактором препятствия развитию заложенных в Vi<span class="pink">EX</span><sup>by ICBA</sup> идей являлась устоявшиеся привычки традиционной реализации выставок, ярмарок и форумов. Переломным моментом востребованности решений, заложенных в Vi<span class="pink">EX</span><sup>by ICBA</sup>, стало понимание существования внешних обстоятельств, стратегически влияющих на возможности привычной использовать их для обсуждаемой задачи.</p>
+								<p>Еще одним существенным фактором препятствия развитию заложенных в Vi<span class="pink">EX</span><sup>by ICBA</sup> идей являлась устоявшиеся привычки традиционной реализации выставок, ярмарок и форумов. Переломным моментом востребованности решений, заложенных в Vi<span class="pink">EX</span><sup>by ICBA</sup>, стало понимание существования внешних обстоятельств, стратегически влияющих на возможности привычной и традиционной организации «выставочного уклада».</p>
 							</div>
 							<div class="image experience__image">
 								<div class="slider experience__slider">
@@ -128,7 +128,7 @@
 									<div class="item"><img src="images/experience2.jpg" alt=""></div>
 									<div class="item"><img src="images/experience3.jpg" alt=""></div>
 								</div>
-								<p>В период всеобщего снижения деловой активности, вследствие противодействия развитию заболеваемости COVID-19, множество мероприятий так или иначе имели попытки реализации в online режимах, преимущественно в формате видеоконференций, но общение в формате видеоконференций, показало множество ограничений. Это позволило сделать вывод, что идеи ViEx, будут более полно отвечать тем требованиям, которые ставятся бизнесом и обществом для полноценного online взаимодействия.</p>
+								<p>В период всеобщего снижения деловой активности, вследствие противодействия развитию заболеваемости COVID-19, множество мероприятий так или иначе имели попытки реализации в online режимах, преимущественно в формате видеоконференций, но общение в формате видеоконференций, показало множество ограничений. Это позволило сделать вывод, что идеи Vi<span class="pink">EX</span><sup>by ICBA</sup>, будут более полно отвечать тем требованиям, которые ставятся бизнесом и обществом для полноценного online взаимодействия.</p>
 							</div>
 						</div>
 					</div>
@@ -171,15 +171,15 @@
 						</div>
 						<div class="flex-row effect__flex-row">
 							<div class="text effect__text">
-								<p>Практическая реализация концепции ViEx позволит участникам делового и общественного взаимодействия значительно повысить его эффективность. </p>
-								<p>В контексте проведения выставок иярмарок, среда ViEx позволит не только сократить время от идеи продукта до его полноценной презентации потенциальным партнерам и покупателям, использовать все возможности online общения в том числе и без языковых ограничений, но и позволит заключать непосредственные безопасные сделки на базе смарт-контрактов, просчитывать логистические цепи и учитывать  особенности таможенного оформления при непосредственном перемещении товаров.</p>
-								<p>ViEx это непрерывные решения в выставочно-ярмарочной деятельности с учетом тематических, сезонных или постоянно действующих экспозиций. Решения ViEx не имеют территориальных ограничений и поэтому способны к привлечению существенно большего количества потенциальных участников и посетителей.</p>
-								<p>В своей деятельности ViEx опирается на тесное сотрудничество с ТПП различных стран и регионов, предпринимательскими объединениями, в том числе международными. Тем самым достигается большой охват потенциальных участников, для которых участие в проекте ViEx как экономически выгодно, так и быстрореализуемо.</p>
-								<p>В контексте проведения различного масштаба общественных дискуссий, ViEx, ввиду высокой, по сравнению с традиционными мероприятиями, оперативностью, позволит обсуждать текущие проблемы, производить обмен мнениями, собирать и объединять экспертные заключения со значительно более высокой эффективностью. </p>
+								<p>Практическая реализация концепции Vi<span class="pink">EX</span><sup>by ICBA</sup> позволит участникам делового и общественного взаимодействия значительно повысить его эффективность. </p>
+								<p>В контексте проведения выставок иярмарок, среда Vi<span class="pink">EX</span><sup>by ICBA</sup> позволит не только сократить время от идеи продукта до его полноценной презентации потенциальным партнерам и покупателям, использовать все возможности online общения в том числе и без языковых ограничений, но и позволит заключать непосредственные безопасные сделки на базе смарт-контрактов, просчитывать логистические цепи и учитывать  особенности таможенного оформления при непосредственном перемещении товаров.</p>
+								<p>Vi<span class="pink">EX</span><sup>by ICBA</sup> это непрерывные решения в выставочно-ярмарочной деятельности с учетом тематических, сезонных или постоянно действующих экспозиций. Решения Vi<span class="pink">EX</span><sup>by ICBA</sup> не имеют территориальных ограничений и поэтому способны к привлечению существенно большего количества потенциальных участников и посетителей.</p>
+								<p>В своей деятельности Vi<span class="pink">EX</span><sup>by ICBA</sup> опирается на тесное сотрудничество с ТПП различных стран и регионов, предпринимательскими объединениями, в том числе международными. Тем самым достигается большой охват потенциальных участников, для которых участие в проекте Vi<span class="pink">EX</span><sup>by ICBA</sup> как экономически выгодно, так и быстрореализуемо.</p>
+								<p>В контексте проведения различного масштаба общественных дискуссий, Vi<span class="pink">EX</span><sup>by ICBA</sup>, ввиду высокой, по сравнению с традиционными мероприятиями, оперативностью, позволит обсуждать текущие проблемы, производить обмен мнениями, собирать и объединять экспертные заключения со значительно более высокой эффективностью. </p>
 							</div>
 							<div class="image effect__image"><img src="images/effect.jpg" alt="">
 								<p>
-									 ViEx это логическое развитие «деловой вселенной», представленной Международным Центром Содействия Бизнесу, на межправкомиссии Россия- Турция в 2019 году.</p>
+									 Vi<span class="pink">EX</span><sup>by ICBA</sup> это логическое развитие «деловой вселенной», представленной Международным Центром Содействия Бизнесу, на межправкомиссии Россия- Турция в 2019 году.</p>
 							</div>
 						</div>
 					</div>
