--- a/index.html
+++ b/index.html
@@ -89,10 +89,9 @@
 								<p>Международная выставка, ярмарка, форум в привычном Вам понимании, только не отходя от компьютера.Лучшие достижения игровой индустрии соединяются с прагматическим решением прикладных вопросов и проблем.</p>
 								<p>Взаимодействие реализовано в виртуальной среде Vi<span class="pink">EX</span><sup>by ICBA</sup>, где предусмотрены такие же как в обычном понимании тематические павильоны, которые экспоненты могут арендовать или заказать персональные. Персональные стенды построены внутри Vi<span class="pink">EX</span><sup>by ICBA</sup> в соответствии с предпочтениями и стилем экспонента. Гибкая настройка под задачу от типового стенда до многозального и многоэтажного.</p>
 								<p>Возможность создавать и использовать профильные залы под конкретные тематические мероприятия от выставок конкретных регионов до проведения  конгрессов  по экологии и климату.Детализация представляемого экспонентом товара или услуги  реализуется с учетом современного подхода  с применением всех доступных технологий, включая непосредственную связь с экспонентом в режиме видеозвонка  с представлением, по требованию услуг переводчика. Vi<span class="pink">EX</span><sup>by ICBA</sup> предусматривает наличие развитой системы внутренней навигации и справочной информации. Внешние посетители не смогут заблудится - их встретит виртуальный помошник и подскажет как найти то, что попадает в сферу их интересов.А еще Vi<span class="pink">EX</span><sup>by ICBA</sup> это хорошая рекламная площадка, направленная на профильных участников и посетителей. Такого удобного размещения рекламных материалов различных форматов, включая 3D модели не смогут предоставить никакие другие решения.</p>
-							</div>
-							<div class="image technical__image"><img src="images/technical.jpg" alt="">
 								<p>Еще одним этапом развития Vi<span class="pink">EX</span><sup>by ICBA</sup> является использование технологий смарт-контрактов и арбитража сделок, включая внутренние расчетные механизмы. Нельзя не упомянуть о том, что пространство Vi<span class="pink">EX</span><sup>by ICBA</sup> является, так же как и обычные  массовые мероприятия, хорошей площадкой для рекламодателей. Размещенную рекламу будут видеть все посетители Vi<span class="pink">EX</span><sup>by ICBA</sup>.</p>
 							</div>
+							<div class="image technical__image"><img src="images/technical.jpg" alt=""></div>
 						</div>
 					</div>
 				</section>
@@ -121,6 +120,7 @@
 								<p>Частично попытки реализовать концепции, отдаленно напоминающие Vi<span class="pink">EX</span><sup>by ICBA</sup> имели место и ранее. Но основным препятствием реализации такого рода  проектов являлось недостаточная готовность технико-технологической базы и современных программно-аппаратных решений. В недавнем прошлом,  устройства не позволяли иметь необходимую вычислительную мощность и пригодные для реализации каналы коммуникаций, прежде всего ограниченный по скорости и относительно дорогой мобильный трафик в недавнем прошлом.  На текущее время каких либо существенных ограничений для использования Vi<span class="pink">EX</span><sup>by ICBA</sup>, в современных персональных устройствах не содержится. Технические характеристики большинства современных гаджетов, спокойно позволяют использовать их для обсуждаемой задачи.</p>
 								<p>Еще одним существенным фактором препятствия развитию заложенных в Vi<span class="pink">EX</span><sup>by ICBA</sup> идей являлась устоявшиеся привычки традиционной реализации выставок, ярмарок и форумов. Переломным моментом востребованности решений, заложенных в Vi<span class="pink">EX</span><sup>by ICBA</sup>, стало понимание существования внешних обстоятельств, стратегически влияющих на возможности привычной использовать их для обсуждаемой задачи.</p>
 								<p>Еще одним существенным фактором препятствия развитию заложенных в Vi<span class="pink">EX</span><sup>by ICBA</sup> идей являлась устоявшиеся привычки традиционной реализации выставок, ярмарок и форумов. Переломным моментом востребованности решений, заложенных в Vi<span class="pink">EX</span><sup>by ICBA</sup>, стало понимание существования внешних обстоятельств, стратегически влияющих на возможности привычной и традиционной организации «выставочного уклада».</p>
+								<p>В период всеобщего снижения деловой активности, вследствие противодействия развитию заболеваемости COVID-19, множество мероприятий так или иначе имели попытки реализации в online режимах, преимущественно в формате видеоконференций, но общение в формате видеоконференций, показало множество ограничений. Это позволило сделать вывод, что идеи Vi<span class="pink">EX</span><sup>by ICBA</sup>, будут более полно отвечать тем требованиям, которые ставятся бизнесом и обществом для полноценного online взаимодействия.</p>
 							</div>
 							<div class="image experience__image">
 								<div class="slider experience__slider">
@@ -128,7 +128,6 @@
 									<div class="item"><img src="images/experience2.jpg" alt=""></div>
 									<div class="item"><img src="images/experience3.jpg" alt=""></div>
 								</div>
-								<p>В период всеобщего снижения деловой активности, вследствие противодействия развитию заболеваемости COVID-19, множество мероприятий так или иначе имели попытки реализации в online режимах, преимущественно в формате видеоконференций, но общение в формате видеоконференций, показало множество ограничений. Это позволило сделать вывод, что идеи Vi<span class="pink">EX</span><sup>by ICBA</sup>, будут более полно отвечать тем требованиям, которые ставятся бизнесом и обществом для полноценного online взаимодействия.</p>
 							</div>
 						</div>
 					</div>
@@ -160,7 +159,7 @@
 							</li>
 						</ul>
 						<div class="buttons-group">
-							<button>Демонстрация технологии</button>
+							<a href="https://3d.pic-list.ru/10" class="button" target="_blank">Демонстрация технологии</a>
 						</div>
 					</div>
 				</section>
