--- a/index.html
+++ b/index.html
@@ -175,11 +175,9 @@
 								<p>Vi<span class="pink">EX</span><sup>by ICBA</sup> это непрерывные решения в выставочно-ярмарочной деятельности с учетом тематических, сезонных или постоянно действующих экспозиций. Решения Vi<span class="pink">EX</span><sup>by ICBA</sup> не имеют территориальных ограничений и поэтому способны к привлечению существенно большего количества потенциальных участников и посетителей.</p>
 								<p>В своей деятельности Vi<span class="pink">EX</span><sup>by ICBA</sup> опирается на тесное сотрудничество с ТПП различных стран и регионов, предпринимательскими объединениями, в том числе международными. Тем самым достигается большой охват потенциальных участников, для которых участие в проекте Vi<span class="pink">EX</span><sup>by ICBA</sup> как экономически выгодно, так и быстрореализуемо.</p>
 								<p>В контексте проведения различного масштаба общественных дискуссий, Vi<span class="pink">EX</span><sup>by ICBA</sup>, ввиду высокой, по сравнению с традиционными мероприятиями, оперативностью, позволит обсуждать текущие проблемы, производить обмен мнениями, собирать и объединять экспертные заключения со значительно более высокой эффективностью. </p>
+								<p>Vi<span class="pink">EX</span><sup>by ICBA</sup> это логическое развитие «деловой вселенной», представленной Международным Центром Содействия Бизнесу, на межправкомиссии Россия- Турция в 2019 году.</p>
 							</div>
-							<div class="image effect__image"><img src="images/effect.jpg" alt="">
-								<p>
-									 Vi<span class="pink">EX</span><sup>by ICBA</sup> это логическое развитие «деловой вселенной», представленной Международным Центром Содействия Бизнесу, на межправкомиссии Россия- Турция в 2019 году.</p>
-							</div>
+							<div class="image effect__image"><img src="images/effect.jpg" alt=""></div>
 						</div>
 					</div>
 				</section>
