--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="css/lightslider.min.css">
 		<link rel="stylesheet" href="css/main.css">
 	</head>
-	<body>
+	<body> -->
 		<main>
 			<button class="hamburger hamburger--collapse"><span class="hamburger-box"><span class="hamburger-inner"></span></span></button>
 			<div class="content">
@@ -200,7 +200,7 @@
 						</div>
 					</div>
 				</section>
-				<section class="created" id="created">
+				<section class="created is-hidden" id="created">
 					<div class="wrapper created__wrapper">
 						<div class="flex-row created__flex-row"><a href="https://promo.webfact.ru" target="_blank">Сделано WebFact</a></div>
 					</div>
