--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="css/lightslider.min.css">
 		<link rel="stylesheet" href="css/main.css">
 	</head>
-	<body> -->
+	<body>
 		<main>
 			<button class="hamburger hamburger--collapse"><span class="hamburger-box"><span class="hamburger-inner"></span></span></button>
 			<div class="content">
